Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25172

Wrong error message for ADD COLUMN .. AS ROW START

    XMLWordPrintable

Details

    Description

      Not quite all dropped:

      CREATE OR REPLACE TABLE t (
      x INT
      ) WITH SYSTEM VERSIONING;
       
      ALTER TABLE t DROP SYSTEM VERSIONING;
       
      ALTER TABLE t ADD COLUMN ts TIMESTAMP(6) GENERATED ALWAYS AS ROW START;
      

      Last alter table results in:

      Duplicate ROW START column `ts`
      

      https://dbfiddle.uk/?rdbms=mariadb_10.3&fiddle=977d0152bbfc5a7162efd85db312d7c8

      Same error occurs on fresh table. SO its just an odd misleading error message.

      Attachments

        Issue Links

          Activity

            People

              midenok Aleksey Midenkov
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75h
                  0.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.