MDEV-25172 Wrong error message for ADD COLUMN .. AS ROW START

Handle one more condition in fix_alter_info() for non-versioned table
and produce ER_VERS_NOT_VERSIONED error.